# Pndulum1

./: ArduinoCom.py  CMakeLists.txt  CommonFunc.py  FileWriter.cpp  FileWriter.hpp  MainProg.py  PhysSim.py  agent.py  communicat.cpp  communicat.hpp  compileChoice.hpp  cppComm.py  guit.py  imageCollection.cpp  imageCollection.hpp  imageProcessing.cpp  imageProcessing.hpp  main.cpp  main.hpp  pygam.py  test.py  test2.py  test3.py  y_model.py  z_CommonFunc.py  z_TrainCtrl.py  z_TrainPhys.py  z_fileoperations.py  z_guit.py  z_main0.py  z_model.py  z_ping.py  z_pong.py  z_prepareData.py
